--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -212,18 +212,17 @@
         <mat-tab label="Recursos" [disabled]="isResourceDisabled">
           <div class="search-table">
             <div class="col-sm-11 search-table-content mat-elevation-z2">
-              <table class="col-sm-12" mat-table [dataSource]="dataSource2" matSort matSortActive="Name"
-                matSortDirection="asc">
+              <table class="col-sm-12" mat-table [dataSource]="dataSource2">
 
                 <!-- Resource Column -->
                 <ng-container matColumnDef="Name">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Recurso </th>
+                  <th mat-header-cell *matHeaderCellDef> Recurso </th>
                   <td mat-cell *matCellDef="let row"> {{row.Name}} </td>
                 </ng-container>
 
                 <!-- Id Hidden Column -->
                 <ng-container matColumnDef="ID">
-                  <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                  <th mat-header-cell [hidden]="show" *matHeaderCellDef> ID </th>
                   <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
                 </ng-container>
 
