--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -329,24 +329,23 @@
         <mat-tab label="Telefones" [disabled]="tabIsDisabled">
           <div class="search-table">
             <div class="col-sm-11 search-table-content mat-elevation-z2">
-              <table class="col-sm-12" mat-table [dataSource]="dataSourcePhone" matSort matSortActive="Name"
-                matSortDirection="asc">
+              <table class="col-sm-12" mat-table [dataSource]="dataSourcePhone">
 
                 <!-- PhoneType Column -->
                 <ng-container matColumnDef="PhoneType">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
+                  <th mat-header-cell *matHeaderCellDef> Tipo </th>
                   <td mat-cell *matCellDef="let row"> {{resolveExibitionPhoneType(row.PhoneType)}} </td>
                 </ng-container>
 
                 <!-- CodeArea + PhoneNumber Column -->
                 <ng-container matColumnDef="NumberPhone">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Número </th>
+                  <th mat-header-cell *matHeaderCellDef> Número </th>
                   <td mat-cell *matCellDef="let row"> ({{row.CodeArea}}) {{row.NumberPhone}}</td>
                 </ng-container>
 
                 <!-- Id Hidden Column -->
                 <ng-container matColumnDef="ID">
-                  <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                  <th mat-header-cell [hidden]="show" *matHeaderCellDef> ID </th>
                   <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
                 </ng-container>
 
@@ -388,25 +387,24 @@
         <mat-tab label="Endereços" [disabled]="tabIsDisabled">
           <div class="search-table">
             <div class="col-sm-11 search-table-content mat-elevation-z2">
-              <table class="col-sm-12" mat-table [dataSource]="dataSourceAddress" matSort matSortActive="Name"
-                matSortDirection="asc">
+              <table class="col-sm-12" mat-table [dataSource]="dataSourceAddress">
 
                 <!-- PhoneType Column -->
                 <ng-container matColumnDef="AddressType">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo </th>
+                  <th mat-header-cell *matHeaderCellDef> Tipo </th>
                   <td mat-cell *matCellDef="let row"> {{resolveExibitionAddressType(row.AddressType)}} </td>
                 </ng-container>
 
                 <!-- Address Column -->
                 <ng-container matColumnDef="Address">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Endereço </th>
+                  <th mat-header-cell *matHeaderCellDef> Endereço </th>
                   <td mat-cell *matCellDef="let row"> {{row.PublicPlace}}, {{row.AddressNumber}} - {{row.District}} -
                     {{row.City}}/{{row.State}} - {{row.Country}}</td>
                 </ng-container>
 
                 <!-- Id Hidden Column -->
                 <ng-container matColumnDef="ID">
-                  <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                  <th mat-header-cell [hidden]="show" *matHeaderCellDef> ID </th>
                   <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
                 </ng-container>
 
