Início Movimentar Estoque

--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque-cadastro/movimentar-estoque-cadastro.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque-cadastro/movimentar-estoque-cadastro.component.html
@@ -1,4 +1,4 @@
-<mat-stepper class="example-stepper" [orientation]="(stepperOrientation | async)!">
+<mat-stepper class="example-stepper" linear>
     <mat-step [stepControl]="firstFormGroup" label="Informações Iniciais">
         <form [formGroup]="firstFormGroup" class="mt-3">
             <div class="div-row-input">
