--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -175,7 +175,7 @@
                   </mat-form-field>
                 </div>
 
-                <div class="div-row-input registration-button-row">
+                <div class="div-row-input registration-button-row d-flex">
 
                   <!-- SALVAR -->
                   <button mat-raised-button class="create-button" (click)="createUpdatePerson()" type="button"
