--- a/VaccineC/src/app/pages/produto/produto.component.html
+++ b/VaccineC/src/app/pages/produto/produto.component.html
@@ -176,7 +176,7 @@
                 </div>
 
                 <!-- Criar e excluir -->
-                <div class="div-row-input registration-button-row">
+                <div class="div-row-input registration-button-row d-flex">
                   <button (click)="createUpdateProduct()" mat-raised-button class="create-button" type="button"
                     [disabled]="createButtonLoading">
                     <div class="spinner">
