--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -3,12 +3,205 @@
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
         <app-container containerTitle="Movimentar Estoque" containerPath="Estoque" [information]="informationField">
-            <mat-tab-group>
-                <mat-tab label="Pesquisa"> 
-                    <app-movimentar-estoque-pesquisa></app-movimentar-estoque-pesquisa>
+            <mat-tab-group #tabGroup>
+                <mat-tab label="Pesquisa">
+                    <div class="search-group">
+                        <div class="col-sm-11 p-0 d-flex">
+                            <mat-form-field class="search-form-field col-sm-9" appearance="outline">
+                                <mat-label>Digite o nome do produto ou o nº do movimento</mat-label>
+                                <input matInput type="text" [(ngModel)]="searchMovementNumber"
+                                    id="searchMovementNumber">
+                            </mat-form-field>
+                            <button (click)="loadMovementData()" id="mat-search-button" mat-raised-button
+                                color="primary" class="mat-button-entry me-2" [disabled]="searchButtonLoading">
+                                <div class="spinner">
+                                    <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
+                                    <span *ngIf="!searchButtonLoading"
+                                        class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                                    Pesquisar
+                                </div>
+                            </button>
+                            <button (click)="addNewMovement(); tabGroup.selectedIndex=1" id="mat-add-button"
+                                mat-raised-button class="mat-button-entry create-button" matTooltip="Novo Movimento"
+                                matTooltipPosition="above">
+                                <span class="fa-solid fa-plus w-20px"></span>
+                            </button>
+                        </div>
+                    </div>
+
+                    <div id="search-table">
+                        <div class="col-sm-11 search-table-content mat-elevation-z2">
+                            <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name"
+                                matSortDirection="asc">
+
+                                <ng-container matColumnDef="MovementNumber">
+                                    <mat-header-cell *matHeaderCellDef> Movimento </mat-header-cell>
+                                    <mat-cell *matCellDef="let element"> {{element.MovementNumber}} </mat-cell>
+                                </ng-container>
+
+                                <ng-container matColumnDef="MovementType">
+                                    <mat-header-cell *matHeaderCellDef> Operação </mat-header-cell>
+                                    <mat-cell *matCellDef="let element"> {{element.MovementType == 'E' ? 'Entrada' :
+                                        'Saída'}}
+                                    </mat-cell>
+                                </ng-container>
+
+                                <ng-container matColumnDef="Situation">
+                                    <mat-header-cell *matHeaderCellDef> Situação </mat-header-cell>
+                                    <mat-cell *matCellDef="let element">
+                                        {{resolveExibitionSituation(element.Situation)}} </mat-cell>
+                                </ng-container>
+
+                                <ng-container matColumnDef="ProductsAmount">
+                                    <mat-header-cell *matHeaderCellDef> R$ </mat-header-cell>
+                                    <mat-cell *matCellDef="let element"> {{element.ProductsAmount | currency : 'R$' }}
+                                    </mat-cell>
+                                </ng-container>
+
+                                <!-- Id Hidden Column -->
+                                <ng-container matColumnDef="ID">
+                                    <th mat-header-cell [hidden]="show" *matHeaderCellDef mat-sort-header> ID </th>
+                                    <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="Options">
+                                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+                                    <mat-cell *matCellDef="let row">
+                                        <button mat-icon-button (click)="editMovement(row.ID); tabGroup.selectedIndex=1"  color="primary" title="Visualizar">
+                                            <i class="fa-solid fa-pen-to-square"></i>
+                                        </button>
+                                    </mat-cell>
+                                </ng-container>
+
+                                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                                <!-- Row shown when there is no matching data. -->
+                                <tr class="mat-row" *matNoDataRow>
+                                    <td class="mat-cell" colspan="3">Nenhum registro encontrado.</td>
+                                </tr>
+                            </table>
+                            <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+                        </div>
+                    </div>
                 </mat-tab>
                 <mat-tab label="Movimento">
-                    <app-movimentar-estoque-cadastro></app-movimentar-estoque-cadastro>
+                    <form [formGroup]="movementForm">
+                        <div class="registration-group">
+                            <div class="offset-sm-1 col-sm-11 p-0">
+                                <div class="div-row-input">
+                                    <mat-form-field appearance="fill" class="col-sm-6">
+                                        <mat-label>Movimento</mat-label>
+                                        <input matInput formControlName="MovementNumber" [(ngModel)]="MovementNumber"
+                                            required readonly>
+                                    </mat-form-field>
+                                </div>
+
+                                <div class="div-row-input">
+                                    <mat-form-field appearance="fill" class="col-sm-6">
+                                        <mat-label>Tipo de Operação</mat-label>
+                                        <mat-select formControlName="MovementType" [(ngModel)]="MovementType" [disabled]="isMovementTypeDisabled" required>
+                                            <mat-option value="E">Entrada</mat-option>
+                                            <mat-option value="S">Saída</mat-option>
+                                        </mat-select>
+                                    </mat-form-field>
+                                </div>
+                                
+                                <div id="tableProducts" class="mt-3 mb-4" *ngIf="isVisible">
+                                    <div class="demo-button-container col-sm-11">
+                                        <button mat-mini-fab class="demo-button me-2 create-button"
+                                            matTooltip="Inserir Produto" matTooltipPosition="right">
+                                            <mat-icon>add</mat-icon>
+                                        </button>
+                                    </div>
+                                    <div id="movement-product-table">
+                                        <div class="col-sm-12 search-table-content mat-elevation-z2">
+                                            <table mat-table [dataSource]="dataSourceMovementProduct" class="col-sm-12">
+
+                                                <ng-container matColumnDef="UnitsNumber">
+                                                    <th mat-header-cell *matHeaderCellDef> Quantidade </th>
+                                                    <td mat-cell *matCellDef="let element"> {{element.UnitsNumber}}
+                                                    </td>
+                                                    <td mat-footer-cell *matFooterCellDef> </td>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="Name">
+                                                    <th mat-header-cell *matHeaderCellDef> Produto </th>
+                                                    <td mat-cell *matCellDef="let element"> {{element.Product.Name}} </td>
+                                                    <td mat-footer-cell *matFooterCellDef> </td>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="UnitaryValue">
+                                                    <th mat-header-cell *matHeaderCellDef> R$ Unitário </th>
+                                                    <td mat-cell *matCellDef="let element"> {{element.UnitaryValue}}
+                                                    </td>
+                                                    <td mat-footer-cell *matFooterCellDef> </td>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="Amount">
+                                                    <th mat-header-cell *matHeaderCellDef> R$ Total </th>
+                                                    <td mat-cell *matCellDef="let element"> {{element.Amount}} </td>
+                                                    <td mat-footer-cell *matFooterCellDef><b> </b></td>
+                                                </ng-container>
+
+                                                <!-- Id Hidden Column -->
+                                                <ng-container matColumnDef="ID">
+                                                    <th mat-header-cell [hidden]="show" *matHeaderCellDef> ID </th>
+                                                    <td mat-cell [hidden]="show" *matCellDef="let row"> {{row.ID}} </td>
+                                                    <td mat-footer-cell *matFooterCellDef> </td>
+                                                </ng-container>
+
+                                                <ng-container matColumnDef="Options">
+                                                    <th mat-header-cell *matHeaderCellDef> </th>
+                                                    <td mat-cell *matCellDef="let row">
+                                                        <button mat-icon-button color="primary" title="Visualizar">
+                                                            <i class="fa-solid fa-pen-to-square"></i>
+                                                        </button>
+                                                    </td>
+                                                    <td mat-footer-cell *matFooterCellDef> </td>
+                                                </ng-container>
+                                                <tr mat-header-row *matHeaderRowDef="displayedColumnsMovementProduct">
+                                                </tr>
+                                                <tr mat-row
+                                                    *matRowDef="let row; columns: displayedColumnsMovementProduct;">
+                                                </tr>
+                                                <tr mat-footer-row *matFooterRowDef="displayedColumnsMovementProduct">
+                                                </tr>
+                                                <!-- Row shown when there is no matching data. -->
+                                                <tr class="mat-row" *matNoDataRow>
+                                                    <td class="mat-cell" colspan="6">Nenhum registro encontrado.</td>
+                                                </tr>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="div-row-input registration-button-row d-flex">
+
+                                    <button mat-raised-button class="create-button" type="button" [hidden]="isSaveButtonHidden">
+                                        <div class="spinner">
+                                            <mat-spinner *ngIf="createButtonLoading" [diameter]="15"></mat-spinner>
+                                            <span *ngIf="!createButtonLoading"
+                                                class="fa-solid fa-floppy-disk me-1 w-20px"></span>
+                                            Salvar
+                                        </div>
+                                    </button>
+                                    <button mat-raised-button class="create-button" type="button" [hidden]="isFinishButtonHidden">
+                                        <div>
+                                            <span class="fa-solid fa-check me-1 w-20px"></span>
+                                            Finalizar
+                                        </div>
+                                    </button>
+                                    <button mat-raised-button color="warn" type="button" [hidden]="isCancelButtonHidden">
+                                        <div>
+                                            <span class="fa-solid fa-xmark me-1 w-20px"></span>
+                                            Cancelar
+                                        </div>
+                                    </button>
+                                </div>
+
+                            </div>
+                        </div>
+                    </form>
+
                 </mat-tab>
             </mat-tab-group>
         </app-container>
