--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -67,7 +67,8 @@
                                 <ng-container matColumnDef="Options">
                                     <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                                     <mat-cell *matCellDef="let row">
-                                        <button mat-icon-button (click)="editMovement(row.ID); tabGroup.selectedIndex=1"  color="primary" title="Visualizar">
+                                        <button mat-icon-button (click)="editMovement(row.ID); tabGroup.selectedIndex=1"
+                                            color="primary" title="Visualizar">
                                             <i class="fa-solid fa-pen-to-square"></i>
                                         </button>
                                     </mat-cell>
@@ -92,24 +93,30 @@
                                     <mat-form-field appearance="fill" class="col-sm-6">
                                         <mat-label>Movimento</mat-label>
                                         <input matInput formControlName="MovementNumber" [(ngModel)]="MovementNumber"
-                                            required readonly>
+                                            readonly>
                                     </mat-form-field>
                                 </div>
 
                                 <div class="div-row-input">
                                     <mat-form-field appearance="fill" class="col-sm-6">
                                         <mat-label>Tipo de Operação</mat-label>
-                                        <mat-select formControlName="MovementType" [(ngModel)]="MovementType" [disabled]="isMovementTypeDisabled" required>
+                                        <mat-select formControlName="MovementType" [(ngModel)]="MovementType"
+                                            [disabled]="isMovementTypeDisabled" required>
                                             <mat-option value="E">Entrada</mat-option>
                                             <mat-option value="S">Saída</mat-option>
                                         </mat-select>
+                                        <mat-error *ngIf="movementForm.controls.MovementType.touched && movementForm.controls.MovementType.invalid">
+                                            <span *ngIf="movementForm.controls.MovementType.errors?.required">O Tipo do Movimento é
+                                              obrigatório.</span>
+                                          </mat-error>
                                     </mat-form-field>
                                 </div>
-                                
+
                                 <div id="tableProducts" class="mt-3 mb-4" *ngIf="isVisible">
                                     <div class="demo-button-container col-sm-11">
                                         <button mat-mini-fab class="demo-button me-2 create-button"
-                                            matTooltip="Inserir Produto" matTooltipPosition="right">
+                                            matTooltip="Inserir Produto" matTooltipPosition="right"
+                                            [hidden]="isAddNewProductButtonHidden" (click)="openDialogAddMovementProduct()">
                                             <mat-icon>add</mat-icon>
                                         </button>
                                     </div>
@@ -126,20 +133,21 @@
 
                                                 <ng-container matColumnDef="Name">
                                                     <th mat-header-cell *matHeaderCellDef> Produto </th>
-                                                    <td mat-cell *matCellDef="let element"> {{element.Product.Name}} </td>
+                                                    <td mat-cell *matCellDef="let element"> {{element.Product.Name}}
+                                                    </td>
                                                     <td mat-footer-cell *matFooterCellDef> </td>
                                                 </ng-container>
 
                                                 <ng-container matColumnDef="UnitaryValue">
                                                     <th mat-header-cell *matHeaderCellDef> R$ Unitário </th>
-                                                    <td mat-cell *matCellDef="let element"> {{element.UnitaryValue}}
+                                                    <td mat-cell *matCellDef="let element"> {{element.UnitaryValue | currency : 'R$' }}
                                                     </td>
                                                     <td mat-footer-cell *matFooterCellDef> </td>
                                                 </ng-container>
 
                                                 <ng-container matColumnDef="Amount">
                                                     <th mat-header-cell *matHeaderCellDef> R$ Total </th>
-                                                    <td mat-cell *matCellDef="let element"> {{element.Amount}} </td>
+                                                    <td mat-cell *matCellDef="let element"> {{element.Amount | currency : 'R$' }} </td>
                                                     <td mat-footer-cell *matFooterCellDef><b> </b></td>
                                                 </ng-container>
 
@@ -153,9 +161,14 @@
                                                 <ng-container matColumnDef="Options">
                                                     <th mat-header-cell *matHeaderCellDef> </th>
                                                     <td mat-cell *matCellDef="let row">
-                                                        <button mat-icon-button color="primary" title="Visualizar">
-                                                            <i class="fa-solid fa-pen-to-square"></i>
-                                                        </button>
+                                                        <button mat-icon-button color="warn" title="Remover"
+                                                        style="float:right;" [disabled]="isButtonsTableDisabled">
+                                                        <i class="fa-solid fa-trash"></i>
+                                                      </button>
+                                                      <button mat-icon-button color="primary"
+                                                        title="Editar" style="float:right;" [disabled]="isButtonsTableDisabled">
+                                                        <i class="fa-solid fa-pen-to-square"></i>
+                                                      </button>
                                                     </td>
                                                     <td mat-footer-cell *matFooterCellDef> </td>
                                                 </ng-container>
@@ -176,7 +189,8 @@
                                 </div>
                                 <div class="div-row-input registration-button-row d-flex">
 
-                                    <button mat-raised-button class="create-button" type="button" [hidden]="isSaveButtonHidden">
+                                    <button mat-raised-button class="create-button" type="button"
+                                        [hidden]="isSaveButtonHidden" (click)="createMovement()">
                                         <div class="spinner">
                                             <mat-spinner *ngIf="createButtonLoading" [diameter]="15"></mat-spinner>
                                             <span *ngIf="!createButtonLoading"
@@ -184,15 +198,21 @@
                                             Salvar
                                         </div>
                                     </button>
-                                    <button mat-raised-button class="create-button" type="button" [hidden]="isFinishButtonHidden">
-                                        <div>
-                                            <span class="fa-solid fa-check me-1 w-20px"></span>
+                                    <button mat-raised-button class="create-button" type="button"
+                                        [hidden]="isFinishButtonHidden" (click)="finishMovement()">
+                                        <div class="spinner">
+                                            <mat-spinner *ngIf="finishButtonLoading" [diameter]="15"></mat-spinner>
+                                            <span *ngIf="!finishButtonLoading"
+                                                class="fa-solid fa-check me-1 w-20px"></span>
                                             Finalizar
                                         </div>
                                     </button>
-                                    <button mat-raised-button color="warn" type="button" [hidden]="isCancelButtonHidden">
-                                        <div>
-                                            <span class="fa-solid fa-xmark me-1 w-20px"></span>
+                                    <button mat-raised-button color="warn" type="button" [hidden]="isCancelButtonHidden"
+                                        (click)="cancelMovement()">
+                                        <div class="spinner">
+                                            <mat-spinner *ngIf="cancelButtonLoading" [diameter]="15"></mat-spinner>
+                                            <span *ngIf="!cancelButtonLoading"
+                                                class="fa-solid fa-xmark me-1 w-20px"></span>
                                             Cancelar
                                         </div>
                                     </button>
