--- a/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-exit-dialog.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/update-movement-product-exit-dialog.html
@@ -41,7 +41,7 @@
             </mat-form-field>
         </div>
 
-        <div id="batch" *ngIf="isBatchTableVisible">
+        <div id="batch">
             <mat-divider></mat-divider>
             <div id="search-table" style="margin-top:2rem;">
                 <div class="col-sm-12 search-table-content mat-elevation-z2">
@@ -111,5 +111,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-button mat-dialog-close>Cancelar</button>
-    <button mat-button (click)="saveMovementProductEntry()" cdkFocusInitial class="create-button">Salvar</button>
+    <button mat-button (click)="updateMovementProductExit()" cdkFocusInitial class="create-button">Salvar</button>
 </mat-dialog-actions>
