--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -3,7 +3,7 @@
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
         <app-container containerTitle="Movimentar Estoque" containerPath="Estoque" [information]="informationField">
-            <mat-tab-group #tabGroup>
+            <mat-tab-group #tabGroup animationDuration="0ms">
                 <mat-tab label="Pesquisa">
                     <div class="search-group">
                         <div class="col-sm-11 p-0 d-flex">
