--- a/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
+++ b/VaccineC/src/app/pages/formas-pagamento/formas-pagamento.component.html
@@ -4,7 +4,7 @@
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Formas Pagamento" containerPath="Cadastros" [information]="informationField">
 
-      <mat-tab-group #tabGroup>
+      <mat-tab-group #tabGroup animationDuration="0ms">
 
         <!-- TAB PESQUISA -->
         <mat-tab label="Pesquisa">
