--- a/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
+++ b/VaccineC/src/app/pages/gerenciar-usuarios/gerenciar-usuarios.component.html
@@ -4,7 +4,7 @@
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Gerenciar Usuários" containerPath="Gerencial" [information]="informationField"> 
 
-      <mat-tab-group #tabGroup>
+      <mat-tab-group #tabGroup animationDuration="0ms">
 
         <!-- SEARCH TAB -->
         <mat-tab label="Pesquisa">
@@ -76,7 +76,7 @@
                 </tr>
               </table>
 
-              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+              <mat-paginator #paginatorUser="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
         </mat-tab>
@@ -241,8 +241,7 @@
                   <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
                 </tr>
               </table>
-
-              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+              <mat-paginator #paginatorResource="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
 
