--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -86,7 +86,7 @@
                                     <td class="mat-cell" colspan="3">Nenhum registro encontrado.</td>
                                 </tr>
                             </table>
-                            <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+                            <mat-paginator  #paginatorMovement="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
                         </div>
                     </div>
                 </mat-tab>
