--- a/VaccineC/src/app/pages/pessoas/pessoas.component.html
+++ b/VaccineC/src/app/pages/pessoas/pessoas.component.html
@@ -3,7 +3,7 @@
   <div id="content-wrapper" class="d-flex flex-column">
     <app-toolbar></app-toolbar>
     <app-container containerTitle="Pessoas" containerPath="Cadastros" [information]="informationField">
-      <mat-tab-group #tabGroup>
+      <mat-tab-group #tabGroup animationDuration="0ms">
 
         <!-- SEARCH TAB -->
         <mat-tab label="Pesquisa">
@@ -81,7 +81,7 @@
                 </tr>
               </table>
 
-              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+              <mat-paginator #paginatorPerson="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
         </mat-tab>
@@ -373,7 +373,7 @@
                 </tr>
               </table>
 
-              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+              <mat-paginator #paginatorPhone="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
 
@@ -432,7 +432,7 @@
                 </tr>
               </table>
 
-              <mat-paginator [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
+              <mat-paginator #paginatorAddress="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator>
             </div>
           </div>
 
