--- a/VaccineC/src/app/pages/recursos/recursos.component.html
+++ b/VaccineC/src/app/pages/recursos/recursos.component.html
@@ -3,7 +3,7 @@
     <div id="content-wrapper" class="d-flex flex-column">
         <app-toolbar></app-toolbar>
         <app-container containerTitle="Recursos" containerPath="Gerencial" [information]="informationField">
-            <mat-tab-group #tabGroup>
+            <mat-tab-group #tabGroup animationDuration="0ms">
 
                 <!-- SEARCH TAB -->
                 <mat-tab label="Pesquisa">
