--- a/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.html
+++ b/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.html
@@ -11,9 +11,43 @@
                                 <h6 class="m-0 font-weight-bold text-gray-600">Lotes a Vencer</h6>
                             </div>
                             <div class="card-body">
-                                <div class="card-area">
-                                    <app-situacao-estoque-lotes></app-situacao-estoque-lotes>
-                                </div>
+                              <div id="search-table">
+                                <mat-table [dataSource]="dataSource" class="col-sm-12">
+                                    <!-- PRODUCT -->
+                                    <ng-container matColumnDef="Product">
+                                        <mat-header-cell *matHeaderCellDef> Produto </mat-header-cell>
+                                        <mat-cell *matCellDef="let element"> {{element.Products.Name}} </mat-cell>
+                                    </ng-container>
+
+                                    <!-- BATCH -->
+                                    <ng-container matColumnDef="Batch">
+                                        <mat-header-cell *matHeaderCellDef> Lote </mat-header-cell>
+                                        <mat-cell *matCellDef="let element"> {{element.Batch}} </mat-cell>
+                                    </ng-container>
+
+                                    <!-- VALIDADE -->
+                                    <ng-container matColumnDef="ValidityBatchDate">
+                                        <mat-header-cell *matHeaderCellDef> Validade </mat-header-cell>
+                                        <mat-cell *matCellDef="let element"> {{element.ValidityBatchDate | date: 'dd/MM/yyyy'}} </mat-cell>
+                                    </ng-container>
+
+                                    <!-- Id Hidden Column -->
+                                    <ng-container matColumnDef="ID">
+                                      <th *matHeaderCellDef mat-header-cell [hidden]="show"> ID </th>
+                                      <td mat-cell [hidden]="show" *matCellDef="let row">
+                                        {{row.ID}} </td>
+                                    </ng-container>
+
+                                    <!-- Row shown when there is no matching data. -->
+                                    <tr class="mat-row" *matNoDataRow>
+                                      <td class="mat-cell" colspan="3">Nenhum registro encontrado.</td>
+                                    </tr>
+
+                                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                                    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                                </mat-table>
+                                <!-- <mat-paginator #paginatorBatch="matPaginator" [pageSizeOptions]="[10, 25, 100]"></mat-paginator> -->
+                              </div>
                             </div>
                         </div>
                     </div>
