--- a/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.scss
+++ b/VaccineC/src/app/pages/situacao-estoque/situacao-estoque.component.scss
@@ -19,3 +19,29 @@
 .card-area {
     height: 20rem;
 }
+
+#search-table {
+  display: flex;
+  justify-content: center;
+  overflow-x: initial;
+  margin: 0.2rem;
+  border: none
+}
+
+:host ::ng-deep .mat-table {
+  border-radius: 0.75rem;
+  box-shadow: 0px 3px 3px -2px rgb(0 0 0 / 7%), 0px 3px 4px 0px rgb(0 0 0 / 7%), 0px 1px 8px 0px rgb(0 0 0 / 7%);
+}
+
+:host ::ng-deep .mat-cell {
+  font-size: 12px !important;
+}
+
+.search-group {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  margin-bottom: 2rem;
+}
