--- a/VaccineC/src/app/pages/empresa/update-company-schedule-dialog.html
+++ b/VaccineC/src/app/pages/empresa/update-company-schedule-dialog.html
@@ -12,6 +12,9 @@
                 <mat-option value="SAB">Sábado</mat-option>
                 <mat-option value="DOM">Domingo</mat-option>
             </mat-select>
+            <mat-error *ngIf="CompanyScheduleForm.controls.Day.touched && CompanyScheduleForm.controls.Day.invalid">
+                <span *ngIf="CompanyScheduleForm.controls.Day.errors?.required">O Dia é obrigatório.</span>
+            </mat-error>
         </mat-form-field>
 
         <div class="div-row-input">
@@ -19,12 +22,22 @@
                 <mat-label>Horário Inicial</mat-label>
                 <input type="time" matInput formControlName="StartTime" id="StartTime" [(ngModel)]="StartTime"
                     required="true">
+                <mat-error
+                    *ngIf="CompanyScheduleForm.controls.StartTime.touched && CompanyScheduleForm.controls.StartTime.invalid">
+                    <span *ngIf="CompanyScheduleForm.controls.StartTime.errors?.required">O Horario Inicial é
+                        obrigatório.</span>
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field appearance="fill" class="col-sm-6">
                 <mat-label>Horário Final</mat-label>
                 <input type="time" matInput formControlName="FinalTime" id="FinalTime" [(ngModel)]="FinalTime"
                     required="true">
+                <mat-error
+                    *ngIf="CompanyScheduleForm.controls.FinalTime.touched && CompanyScheduleForm.controls.FinalTime.invalid">
+                    <span *ngIf="CompanyScheduleForm.controls.FinalTime.errors?.required">O Horario Final é
+                        obrigatório.</span>
+                </mat-error>
             </mat-form-field>
         </div>
     </form>
