--- a/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
+++ b/VaccineC/src/app/pages/movimentar-estoque/movimentar-estoque.component.html
@@ -111,7 +111,7 @@
                                             <mat-option value="S">Saída</mat-option>
                                         </mat-select>
                                         <mat-error *ngIf="movementForm.controls.MovementType.touched && movementForm.controls.MovementType.invalid">
-                                            <span *ngIf="movementForm.controls.MovementType.errors?.required">O Tipo do Movimento é
+                                            <span *ngIf="movementForm.controls.MovementType.errors?.required">O Tipo de Operação é
                                               obrigatório.</span>
                                           </mat-error>
                                     </mat-form-field>
