--- a/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
+++ b/VaccineC/src/app/pages/minha-conta/minha-conta.component.html
@@ -8,7 +8,7 @@
                     <div class="card mb-4 is-card">
                         <div class="card-body text-center">
                             <img src="{{userPersonProfilePic}}" alt="avatar"
-                                class="rounded-circle img-fluid" style="width: 150px;">
+                                class="rounded-circle img-fluid" style="width: 150px;height: 150px;">
                             <h5 class="my-3 text-gray-800">{{userPersonName}}</h5>
                             <p class="text-muted mb-4">{{userEmail}}</p>
                             <div class="d-flex justify-content-center mb-2">
